--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/themes": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.5",
     "react": "19.1.0",
