--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.540.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
